# BEngine

./: .gitignore  CMakeLists.txt
.github/workflows/: ccpp.yml
engine/: CMakeLists.txt  README.md  build.bat  test.txt
engine/include/: window.h
engine/include/internal/: engine.h  window.h
engine/src/: main.cpp  window.cpp
engine/src/internal/: renderer.cpp  window.cpp
include/internal/: engine.h  renderer.h  window.h
src/: main.cpp
src/internal/: engine.cpp  renderer.cpp  window.cpp
